# Intent-Based-Cross-Parachain-Solver

./: .gitignore  README.md  deploy_evm.sh  deploy_pvm.sh  package-lock.json  package.json  render.yaml  vercel.json
contracts/: .env.example  README.md  foundry.toml
contracts/broadcast/DeployProtocol.s.sol/420420417/: run-latest.json
contracts/broadcast/IntentSourceVault.s.sol/420420417/: run-latest.json
contracts/cache/: solidity-files-cache.json  test-failures
contracts/pvm/: Cargo.toml  deployed_addresses.txt
contracts/pvm/.cargo/: config.toml
contracts/pvm/src/: lib.rs
contracts/script/: DeployProtocol.s.sol  IntentSourceVault.s.sol
contracts/src/: IIntentSource.sol  IVerifier.sol  IXcm.sol  IntentExecutor.sol  IntentSourceVault.sol  LibScale.sol  MockDEX.sol  TokenFactory.sol
contracts/test/: CrossVMIntegration.t.sol  IntentExecutor.t.sol  IntentSourceVault.t.sol
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  web3config.ts
frontend/src/components/: ActivityLog.tsx  EMAChart.tsx  Faucet.tsx  Header.tsx  IntentDesigner.tsx  IntentWidget.tsx  LiveTracker.tsx  MintModal.tsx  Navbar.tsx  Sidebar.tsx  StatsOverview.tsx  SuccessModal.tsx
frontend/src/constants/: IntentExecutor.json  MockERC20.json  config.ts  faucet.ts
frontend/src/hooks/: useFaucet.ts
frontend/src/types/: simulation.ts
frontend/src/utils/: web3.ts
solver/: .env  package-lock.json  package.json  tsconfig.json
solver/src/: abi.json  create-intent.ts  listen.ts  mint-stablecoins.ts  onboard-solver.ts  whitelist-tokens.ts
(+3 files in other folders)
